--- a/.gitignore
+++ b/.gitignore
@@ -45,8 +45,9 @@ jspm_packages/
 # Snowpack dependency directory (https://snowpack.dev/)
 web_modules/
 
-# TypeScript cache
+# TypeScript
 *.tsbuildinfo
+next-env.d.ts
 
 # Optional npm cache directory
 .npm
@@ -86,6 +87,7 @@ web_modules/
 # Next.js build output
 .next
 out
+certificates
 
 # Nuxt.js build / generate output
 .nuxt
@@ -128,3 +130,13 @@ dist
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
+
+# production
+/build
+
+# misc
+.DS_Store
+*.pem
+
+# vercel
+.vercel
