--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,6 @@
 {
-  "extends": ["next/core-web-vitals", "prettier"],
+  "extends": ["next/core-web-vitals", "next/typescript", "prettier"],
   "rules": {
-    "no-console": "warn",
-    "no-unused-vars": "warn"
+    "no-console": "error"
   }
 }
