--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "dependencies": {
     "maplibre-gl": "^4.5.0",
-    "next": "14.2.5",
+    "next": "^14.2.12",
     "react": "^18",
     "react-dom": "^18",
     "react-map-gl": "^7.1.7"
@@ -28,11 +28,11 @@
     "@vitejs/plugin-react": "^4.3.1",
     "@vitest/coverage-v8": "^2.0.5",
     "eslint": "^8",
-    "eslint-config-next": "14.2.5",
+    "eslint-config-next": "^14.2.9",
     "eslint-config-prettier": "^9.1.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5",
+    "typescript": "^5.6.2",
     "vitest": "^2.0.5"
   }
 }
