--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "next": "^14.2.12",
     "react": "^18",
     "react-dom": "^18",
-    "react-map-gl": "^7.1.7"
+    "react-map-gl": "^7.1.7",
+    "sharp": "^0.33.5"
   },
   "devDependencies": {
     "@testing-library/dom": "^10.4.0",
